--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "open": "^8.2.1",
-    "parcel": "^2.2.0",
-    "prettier": "2.6.2"
+    "parcel": "^2.8.3",
+    "postcss": "^8.4.21",
+    "prettier": "2.6.2",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.2.4"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.6"
   }
 }
